// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Formatting elodin syntax should return beautiful syntax 1`] = `
"
fragment Flex {
   flexGrow: 1
  flexDirection: row
}
view Button{backgroundColor: red color: blue


      __borderWidth: .3
       color: rgb(  255  200   155  )

  [ Type =   Primary  ] {  color:red [Mode=Dark]{color:yellow backgroundColor:green}}
  }

   text    Label {
lineHeight:   $lineHeight
    fontSize: 20

     [@hover] {
       color:red
     }

     [@minWidth=320] {
       color:blue [@hover] {
         color: green
       }
     }
}"
`;

exports[`Formatting elodin syntax should return beautiful syntax with custom syntax 1`] = `
Object {
  "code": "
fragment Flex {
   flexGrow: 1
  flexDirection: row
}
view Button{backgroundColor: red color: blue


      __borderWidth: .3
       color: rgb(  255  200   155  )

  [ Type =   Primary  ] {  color:red [Mode=Dark]{color:yellow backgroundColor:green}}
  }

   text    Label {
lineHeight:   $lineHeight
    fontSize: 20

     [@hover] {
       color:red
     }

     [@minWidth=320] {
       color:blue [@hover] {
         color: green
       }
     }
}",
  "errors": Array [
    Object {
      "message": "color: undefined
^-------
The property color is an invalid view property.
In Button
",
      "type": "INVALID_PROPERTY",
    },
    Object {
      "message": "color: undefined
^-------
The property color is an invalid view property.
In Button
",
      "type": "INVALID_PROPERTY",
    },
    Object {
      "message": "color: undefined
^-------
The property color is an invalid view property.
In Button
",
      "type": "INVALID_PROPERTY",
    },
    Object {
      "message": "color: yellow
^-------
The property color is an invalid view property.
In Button
",
      "type": "INVALID_PROPERTY",
    },
  ],
}
`;
